src/sweep/snapshots/linesweeper__sweep__weak_ordering__tests__square.snap
---
source: src/sweep/weak_ordering.rs
expression: "snapshot_outputs(segs, 0.01)"
---
[
  Output(
    order: SegmentOrder(
      segs: [
        SegmentOrderEntry(
          seg: SegIdx(3),
          exit: false,
          enter: true,
          needs_position: true,
          old_idx: Some(0),
        ),
        SegmentOrderEntry(
          seg: SegIdx(0),
          exit: true,
          enter: true,
          needs_position: true,
          old_idx: Some(1),
        ),
        SegmentOrderEntry(
          seg: SegIdx(1),
          exit: false,
          enter: true,
          needs_position: true,
          old_idx: Some(2),
        ),
      ],
    ),
    changed: [
      (0, 3),
    ],
  ),
  Output(
    order: SegmentOrder(
      segs: [
        SegmentOrderEntry(
          seg: SegIdx(3),
          exit: true,
          enter: false,
          needs_position: true,
          old_idx: Some(0),
        ),
        SegmentOrderEntry(
          seg: SegIdx(2),
          exit: true,
          enter: true,
          needs_position: true,
          old_idx: Some(1),
        ),
        SegmentOrderEntry(
          seg: SegIdx(1),
          exit: true,
          enter: false,
          needs_position: true,
          old_idx: Some(2),
        ),
      ],
    ),
    changed: [
      (0, 3),
    ],
  ),
]
